# domus

./: Cargo.toml
core/: Cargo.toml
core/src/: device.rs  lib.rs  life_cycle.rs  space.rs
disco/: Cargo.toml
disco/src/: main.rs
domus/: Cargo.toml
domus/src/: domus_macro.rs  main.rs
driver/: Cargo.toml
driver/src/: aqara_fp2.rs  driver_registry.rs  lib.rs
driver/src/hap/: client.rs  discovery.rs  hap.rs  mod.rs  pairing.rs  tlv8.rs
hal/: Cargo.toml
hal/src/: lib.rs
src/: aqara_fp2.rs  hal.rs  main.rs
