cargo-features = ["edition2024"]

[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
hal = { path = "../hal" }
core = { path = "../core" }
futures-util = "0.3.30"
mdns-sd = "0.11.1"
log = "0.4.21"
srp = { git = "https://github.com/RustCrypto/PAKEs.git", branch = "master" }
enumflags2 = "0.7.10"
sha2 = "0.10.8"
