cargo-features = ["edition2024"]

[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
hal = { path = "../hal" }
core = { path = "../core" }
futures-util = "0.3.30"
mdns-sd = "0.11.1"
log = "0.4.21"
# srp = { git = "https://github.com/RustCrypto/PAKEs.git", branch = "master" }
# srp = { git = "https://github.com/masihyeganeh/PAKEs.git", branch ="standard-implementation-option" }
srp6 = "=1.0.0-alpha.6"
enumflags2 = "0.7.10"
sha2 = "0.10.8"
rand = "0.8.5"
ed25519-dalek = "2.1.1"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.12.5"
num-bigint = "0.4"